Add native Java 26 profiles, HTTP qualification and repeatable launcher and workload checks